feat(api): sync with E2B's latest API spec
https://github.com/e2b-dev/infra/commit/7c417f485cdc38d710d335f1930c3d597da74601
