# src/api/generated/src/models.rs
@@ -3567,11 +3567,6 @@ pub struct NodeDetail {
     #[validate(nested)]
     pub metrics: models::NodeMetrics,
 
-    /// List of cached builds id on the node
-    #[serde(rename = "cachedBuilds")]
-    #[validate(custom(function = "check_xss_vec_string"))]
-    pub cached_builds: Vec<String>,
-
     /// Number of sandbox create successes
     #[serde(rename = "createSuccesses")]
     pub create_successes: u64,
@@ -3597,7 +3592,6 @@ impl NodeDetail {
         status: models::NodeStatus,
         sandbox_count: u32,
         metrics: models::NodeMetrics,
-        cached_builds: Vec<String>,
         create_successes: u64,
         create_fails: u64,
         sandbox_paused_count: u32,
@@ -3612,7 +3606,6 @@ impl NodeDetail {
             status,
             sandbox_count,
             metrics,
-            cached_builds,
             create_successes,
             create_fails,
             sandbox_paused_count,
@@ -3642,14 +3635,6 @@ impl std::fmt::Display for NodeDetail {
             Some("sandboxCount".to_string()),
             Some(self.sandbox_count.to_string()),
             // Skipping metrics in query parameter serialization
-            Some("cachedBuilds".to_string()),
-            Some(
-                self.cached_builds
-                    .iter()
-                    .map(|x| x.to_string())
-                    .collect::<Vec<_>>()
-                    .join(","),
-            ),
             Some("createSuccesses".to_string()),
             Some(self.create_successes.to_string()),
             Some("createFails".to_string()),
@@ -3686,7 +3671,6 @@ impl std::str::FromStr for NodeDetail {
             pub status: Vec<models::NodeStatus>,
             pub sandbox_count: Vec<u32>,
             pub metrics: Vec<models::NodeMetrics>,
-            pub cached_builds: Vec<Vec<String>>,
             pub create_successes: Vec<u64>,
             pub create_fails: Vec<u64>,
             pub sandbox_paused_count: Vec<u32>,
@@ -3750,12 +3734,6 @@ impl std::str::FromStr for NodeDetail {
                         <models::NodeMetrics as std::str::FromStr>::from_str(val)
                             .map_err(|x| x.to_string())?,
                     ),
-                    "cachedBuilds" => {
-                        return std::result::Result::Err(
-                            "Parsing a container in this style is not supported in NodeDetail"
-                                .to_string(),
-                        );
-                    }
                     #[allow(clippy::redundant_clone)]
                     "createSuccesses" => intermediate_rep.create_successes.push(
                         <u64 as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?,
@@ -3827,11 +3805,6 @@ impl std::str::FromStr for NodeDetail {
                 .into_iter()
                 .next()
                 .ok_or_else(|| "metrics missing in NodeDetail".to_string())?,
-            cached_builds: intermediate_rep
-                .cached_builds
-                .into_iter()
-                .next()
-                .ok_or_else(|| "cachedBuilds missing in NodeDetail".to_string())?,
             create_successes: intermediate_rep
                 .create_successes
                 .into_iter()
